--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "devextreme-react": "^23.2.5",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.6.0",
