--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@tanstack/react-table": "^8.16.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-react": "^31.3.1",
     "axios": "^1.6.8",
     "devextreme-react": "^23.2.5",
     "formik": "^2.4.5",
+    "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
