--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
