--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "react-use": "^17.5.0",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
