--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.8",
     "devextreme-react": "^23.2.5",
     "formik": "^2.4.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -28,9 +30,11 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "react-use": "^17.5.0",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
