--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fileforge/react-print": "^0.1.134",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.2",
     "@tanstack/react-table": "^8.16.0",
@@ -12,17 +13,20 @@
     "ag-grid-react": "^31.3.1",
     "axios": "^1.6.8",
     "devextreme-react": "^23.2.5",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
+    "pdfmake": "^0.2.10",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-date-picker": "^10.6.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.3.1",
+    "react-html2pdf": "^1.0.1",
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
@@ -30,6 +34,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.4",
     "react-use": "^17.5.0",
     "recharts": "^2.12.7",
