custom redux slice

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
+  "homepage": "http://localhost:8080/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
